# webkit-javascriptcore

./: .gitignore  .travis.yml  Gtk2HsSetup.hs  Setup.hs  default.nix  flake.nix  hsjscore.h  install-both.sh  marshal.list  webkit-javascriptcore.cabal  webkit-javascriptcore.cabal-renamed  webkit2gtk3-javascriptcore.cabal  webkit3-javascriptcore.cabal  webkitgtk3-javascriptcore.cabal  webkitgtk3-javascriptcore.cabal-renamed
.github/workflows/: haskell-ci.yml
include/: JSObjectRef.chs.h
nix/: hix.nix  sources.json
src/Graphics/UI/Gtk/WebKit/JavaScriptCore/: .gitignore  JSBase.chs  JSContextRef.chs  JSObjectRef.chs  JSStringRef.chs  JSValueRef.chs  WebFrame.chs
travis/: build.sh  xenial.Dockerfile
