Name:		webkit-javascriptcore
Version:	0.0.0.999
Synopsis:       JavaScriptCore FFI from webkitgtk
Description: 	FFI for JavaScriptCore module from webkitgtk 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Custom
Cabal-Version:  >= 1.8
Extra-Source-Files: hsjscore.h
                    include/*.chs.h
                    SetupWrapper.hs SetupMain.hs Gtk2HsSetup.hs
                    marshal.list
		    hierarchy.list

x-Types-File:       src/Graphics/UI/Gtk/WebKit/JavaScriptCore/Types.chs
x-Types-Tag:        javascript2
x-Types-ModName:    Graphics.UI.Gtk.WebKit.JavaScriptCore.Types
x-Types-Forward:    *Graphics.UI.GtkInternals
x-Types-Destructor: objectUnrefFromMainloop
x-Types-Hierarchy:  hierarchy.list

Library
        hs-source-dirs: src
        build-depends:  base >= 4 && < 5, mtl
						
        build-tools:    gtk2hsC2hs >= 0.13.5,
                        gtk2hsHookGenerator, gtk2hsTypeGen
						
        exposed-modules:
                   Graphics.UI.Gtk.WebKit.JavaScriptCore.JSBase
                   Graphics.UI.Gtk.WebKit.JavaScriptCore.JSContextRef 
                   Graphics.UI.Gtk.WebKit.JavaScriptCore.JSObjectRef
                   Graphics.UI.Gtk.WebKit.JavaScriptCore.JSStringRef
                   Graphics.UI.Gtk.WebKit.JavaScriptCore.JSValueRef 
        other-modules:

		  
        extensions:     ForeignFunctionInterface

        x-Signals-File:  src/Graphics/UI/Gtk/WebKit/JavaScriptCore/Signals.chs
        x-Signals-Modname: src/Graphics.UI.Gtk.WebKit.JavaScriptCore.Signals
        x-Signals-Types: marshal.list
		
        include-dirs: .
                      include 
                      /usr/include/webkitgtk-1.0
        x-c2hs-Header:  hsjscore.h
 --        pkgconfig-depends: gtksourceview-3.0 >= 3.0.0

        x-Types-Hierarchy:  hierarchy.list
